src/scss/components/_list.scss
.it-list {
  --#{$prefix}list-item-spacing: var(--#{$prefix}spacing-inset-s) var(--#{$prefix}spacing-inset-xs);
  --#{$prefix}list-item-thumb-size: 5rem;
}
//mobile
.it-list-wrapper {
  .it-list {
    list-style-type: none;
    margin: 0;
    padding: 0;

    a.list-item span {
      text-decoration: underline;
    }
   
    .list-item {
      // transition: all 0.3s;
      margin-top: -1px;
      display: flex;
      align-items: center;
      text-decoration: none;
      // border-bottom: 1px solid $list-border-color;
      overflow-wrap: anywhere;

      .avatar,
      .it-rounded-icon,
      .it-thumb {
        flex-shrink: 0;
        margin-right: $v-gap * 2;
      }

      .it-rounded-icon {
        width: $v-gap * 5;

        svg {
          fill: var(--#{$prefix}icon-primary);
        }
      }

      .form-check {
        margin-right: $v-gap;
        width: $v-gap;
        height: $v-gap * 4;
        text-align: left;

        & + .it-right-zone {
          margin-left: $v-gap * 2;
        }

        label {
          padding-left: 0;
          margin-bottom: 0;
        }
      }

      .it-thumb {
        width: var(--#{$prefix}list-item-thumb-size);
        // height: var(--#{$prefix}list-item-thumb-size);

        img {
          object-fit: cover;
          width: 100%;
          height: 100%;
        }
      }

      .it-right-zone {
        padding: $list-text-padding;
        flex-grow: 1;
        display: flex;
        justify-content: space-between;
        align-items: center;

        svg {
          fill: $primary;
          width: $v-gap * 3;
          height: $v-gap * 3;
        }

        .it-multiple {
          display: flex;
          justify-content: flex-end;
          flex-wrap: wrap;

          .metadata {
            margin-right: 0;
            width: 100%;
            text-align: right;
          }

          svg {
            margin-left: $v-gap * 2;
            margin-right: 0;
          }
        }

        .toggles {
          height: $v-gap * 4;
        }

        .metadata {
          color: $list-metadata-color;
          font-size: $list-metadata-size;
          letter-spacing: $list-metadata-space;
        }

        .text {
          font-size: $list-font-size;
          font-weight: $font-weight-semibold;
          @include media-breakpoint-up(lg) {
            font-size: 1.125rem;
          }
        }

        .text + p {
          font-size: $list-sub-size;
          color: $list-sub-color;
          font-weight: $font-weight-normal;
        }
      }
    }

   li:not(:last-child) .list-item {
      border-bottom: 1px solid var(--#{$prefix}color-border-subtle);
    }

    // li:last-child {
    //   .list-item {
    //     span.text {
    //       border-bottom: 1px solid transparent;
    //     }
    //   }
    // }

    // a .text {
    //   text-decoration: underline;
    // }
  }
}

// Desktop
@include media-breakpoint-up(xl) {
  .it-list-wrapper {
    .it-list {
      .list-item {
        .avatar,
        .it-rounded-icon,
        .it-thumb {
          margin-left: $v-gap;
          margin-right: 0;

          & + .it-right-zone {
            margin-left: $v-gap * 2;
          }
        }

        .form-check {
          margin-right: $v-gap * 2;
          text-align: center;
        }

        // hover
        .it-right-zone {
          margin-left: $v-gap;
          margin-right: $v-gap;

          span.it-multiple {
            margin-right: $v-gap;

            a {
              svg {
                transition: fill 0.3s;
              }

              &:hover {
                svg {
                  fill: var(--#{$prefix}icon-primary-hover);
                }
              }
            }
          }

          .toggles {
            margin-right: 0;
          }

          span.metadata {
            margin-right: $v-gap;
          }
        }
      }

      a.list-item:hover {
        color: var(--#{$prefix}color-text-primary-hover);
        // box-shadow: $card-shadow;
        // text-decoration: none;
        // background: $white;
        // position: relative;
        // z-index: 1;
        // transition: none;
        // border-bottom: 1px solid transparent;
      }
    }
  }
}

